[package]
name = "miniless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
ropey = "1.3.1"
grep = "0.2"
env_logger = "0.11.3"
log = "0.4.21"
